<resources>
    <string name="app_name">AAU Training</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="student_name">Student Name</string>
    <string name="Profile">My Profile</string>
    <string name="my_schedule">My Schedule</string>
    <string name="contact_supervisor">Contact Supervisor</string>
    <string name="contact_trainer">Contact Trainer</string>
    <string name="college_name">College Name</string>
    <string name="major">Major</string>
    <string name="student_number">Student Number</string>
    <string name="gpa">GPA</string>
    <string name="training_progress">Training Progress</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="scientific_rank">Scientific Rank</string>
    <string name="job_title">Job Title</string>
    <string name="mobile">Mobile</string>
    <string name="email">EMail</string>
    <string name="send_inapp_msg">Send In-App Message</string>
    <string name="company">Company</string>
    <string name="specialty">Specialty</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="error">An error happened !!</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_username">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_login">Invalid username or password</string>
    <string name="user_inactive">User is not active</string>
    <string name="logout">Log Out</string>
    <string name="confirm_logout">Are you sure you want to logout ?</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="faculty">Faculty</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="department">Department</string>
    <string name="department_name">Department Name</string>
    <string name="training_field">Training Field</string>
    <string name="training_start_date">Training Start Date</string>
    <string name="training_end_date">Training End Date</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="trainee_list">Trainee List</string>
    <string name="trainee_profile">Trainee Profile</string>
    <string name="average_rating">Average Rating</string>
    <string name="schedule">Schedule</string>
    <string name="rating">Rating</string>
    <string name="finish_training">Finish Training</string>
    <string name="add">Add</string>
    <string name="trainee_schedule">Trainee Schedule</string>
    <string name="trainee_name">Trainee Name</string>
    <string name="training_date">Training Date</string>
    <string name="training_place">Training Place</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="gained_skills">Gained Skills</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="edit_trainee_schedule">Edit Trainee Schedule</string>
    <string name="attended">Attended</string>
    <string name="not_specified">Not specified</string>
    <string name="absence_with_reason">Absence with reason</string>
    <string name="absence_without_reason">Absence without reason</string>
    <string name="add_schedule">Add Schedule</string>
    <string-array name="attending">
        <item>@string/not_specified</item>
        <item>@string/attended</item>
        <item>@string/absence_with_reason</item>
        <item>@string/absence_without_reason</item>
    </string-array>
    <string-array name="finish_reason_array">
        <item>@string/complete_required_hours</item>
        <item>@string/frequent_absence</item>
        <item>@string/other_reason</item>
    </string-array>
    <string name="add_trainee_schedule">Add Trainee Schedule</string>
    <string name="enter_schedule_date">Enter  schedule date</string>
    <string name="enter_schedule_place">Enter Schedule Place</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_delete_schedule">Are you sure you want to delete this schedule</string>
    <string name="choose_trainee">Choose Trainee</string>
    <string name="cancel">Cancel</string>
    <string name="enter_training_place">Enter training place</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="recommendation">Recommendation</string>
    <string name="finish_reason">Finish Reason</string>
    <string name="attend_commitment">Attend Commitment</string>
    <string name="learning_well">Learning Well</string>
    <string name="learning_ability">Learning Ability</string>
    <string name="applying_skills">Applying Learnt skills</string>
    <string name="frequent_absence">Frequent Absence</string>
    <string name="complete_required_hours">Complete Required Hours</string>
    <string name="other_reason">Other reason</string>
    <string name="enter_recommendation">Please enter your recommendation</string>
    <string name="students_list">Students List</string>
    <string name="student_profile">Student Profile</string>
    <string name="attend_days_count">#days attended</string>
    <string name="absence_days_count">#days absence</string>
    <string name="trainer_rating">View Trainer Rating</string>
    <string name="student_has_no_training">You do not have active training</string>
    <string name="choose_student">Choose Student</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_time">Select Time</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="student_schedule">Student\'s Schedule</string>
    <string name="training_schedule_details">Training Schedule Details</string>
    <string name="supervisor_rating">Supervisor Rating</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_list">Chat List</string>
    <string name="default_notification_channel_id">5345</string>
    <string name="channel_name">aau_notification_channel</string>
    <string name="channel_description">AAU notification channel</string>
    <string name="notifications_list">Notifications List</string>
    <string name="notifications_list_with_dot">Notifications List *</string>
</resources>