<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/supervisor_nav_profile"
            android:icon="@drawable/ic_student_logo"
            android:title="@string/Profile" />
        <item
            android:id="@+id/supervisor_nav_schedule"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/my_schedule" />
        <item
            android:id="@+id/supervisor_nav_student_list"
            android:icon="@drawable/ic_student_logo"
            android:title="@string/students_list" />
        <item
            android:id="@+id/supervisor_nav_logout"
            android:icon="@drawable/ic_chat_logo"
            android:title="@string/logout" />
    </group>
</menu>