<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trainer_mobile_navigation"
    app:startDestination="@+id/trainer_nav_profile">

    <fragment
        android:id="@+id/trainer_nav_profile"
        android:name="jo.edu.aau.aautraining.trainer.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/trainer_profile_fragment" >
    </fragment>
    <fragment
        android:id="@+id/trainer_nav_logout"
        android:name="jo.edu.aau.aautraining.shared.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/shared_logout_fragment" />

    <fragment
        android:id="@+id/trainer_nav_schedule"
        android:name="jo.edu.aau.aautraining.trainer.ui.schedule.ScheduleFragment"
        android:label="@string/my_schedule"
        tools:layout="@layout/trainer_schedule_fragment" >
        <action
            android:id="@+id/action_trainer_nav_schedule_to_trainer_nav_trainee_schedule_edit"
            app:destination="@id/trainer_nav_trainee_schedule_edit" />
        <action
            android:id="@+id/action_trainer_nav_schedule_to_trainer_nav_trainee_schedule_add"
            app:destination="@id/trainer_nav_trainee_schedule_add" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_trainee_list"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.TrainerTraineeFragment"
        android:label="@string/trainee_list"
        tools:layout="@layout/trainer_trainee_fragment" >
        <action
            android:id="@+id/action_trainer_nav_trainee_list_to_trainer_nav_trainee_profile"
            app:destination="@id/trainer_nav_trainee_profile" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_trainee_profile"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.profile.TraineeProfileFragment"
        android:label="@string/trainee_profile"
        tools:layout="@layout/trainer_trainee_profile_fragment">
        <argument
            android:name="training_id"
            app:argType="integer" />
        <argument
            android:name="trainee_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainer_nav_trainee_profile_to_trainer_nav_trainee_chat"
            app:destination="@id/trainer_nav_chat" />
        <action
            android:id="@+id/action_trainer_nav_trainee_profile_to_trainer_nav_trainee_schedule"
            app:destination="@id/trainer_nav_trainee_schedule" />
        <action
            android:id="@+id/action_trainer_nav_trainee_profile_to_trainer_nav_supervisor"
            app:destination="@id/trainer_nav_supervisor" />
        <action
            android:id="@+id/action_trainer_nav_trainee_profile_to_trainer_nav_finish_training"
            app:destination="@id/trainer_nav_finish_training" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_chat_list"
        android:name="jo.edu.aau.aautraining.shared.ui.chat.ChatListFragment"
        android:label="@string/chat_list"
        tools:layout="@layout/fragment_chat_list">
        <argument
            android:name="from_role"
            app:argType="string" />
        <argument
            android:name="from_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainer_nav_chat_list_to_trainer_nav_chat"
            app:destination="@id/trainer_nav_chat" />
    </fragment>
    <fragment
        android:id="@+id/trainer_nav_chat"
        android:name="jo.edu.aau.aautraining.shared.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/shared_chat_fragment">
        <argument
            android:name="contact_name"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="db_guid"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="from_role"
            app:argType="string" />
        <argument
            android:name="from_id"
            app:argType="integer" />
        <argument
            android:name="to_role"
            app:argType="string" />
        <argument
            android:name="to_id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_trainee_schedule"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.schedule.TrainerTraineeScheduleFragment"
        android:label="@string/trainee_schedule"
        tools:layout="@layout/trainer_trainee_schedule_fragment">
        <argument
            android:name="trainee_id"
            app:argType="integer" />
        <argument
            android:name="trainee_name"
            app:argType="string" />
        <argument
            android:name="training_id"
            app:argType="integer" />
        <argument
            android:name="training_status"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainer_nav_trainee_schedule_to_trainer_nav_trainee_schedule_edit"
            app:destination="@id/trainer_nav_trainee_schedule_edit" />
        <action
            android:id="@+id/action_trainer_nav_trainee_schedule_to_trainer_nav_trainee_schedule_add"
            app:destination="@id/trainer_nav_trainee_schedule_add" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_trainee_schedule_edit"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.schedule.TraineeScheduleEditFragment"
        android:label="@string/edit_trainee_schedule"
        tools:layout="@layout/trainee_schedule_edit_fragment" >
        <argument android:name="trainee_name"
            app:argType="string"/>
        <argument android:name="schedule_id"
            app:argType="integer"/>
    </fragment>
    <fragment
        android:id="@+id/trainer_nav_trainee_schedule_add"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.schedule.TraineeScheduleAddFragment"
        android:label="@string/add_trainee_schedule"
        tools:layout="@layout/trainee_schedule_add_fragment">
        <argument
            android:name="trainee_name"
            app:argType="string" />
        <argument
            android:name="training_id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_supervisor"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.supervisor.SupervisorFragment"
        android:label="@string/contact_supervisor"
        tools:layout="@layout/trainer_supervisor_fragment">
        <argument
            android:name="supervisor_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_trainer_nav_supervisor_to_trainer_nav_chat"
            app:destination="@id/trainer_nav_chat" />
    </fragment>
    <fragment
        android:id="@+id/trainer_nav_finish_training"
        android:name="jo.edu.aau.aautraining.trainer.ui.trainee.finish.TraineeFinishFragment"
        android:label="@string/finish_training"
        tools:layout="@layout/trainee_finish_fragment">
        <argument
            android:name="training_id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/trainer_nav_notification_list"
        android:name="jo.edu.aau.aautraining.shared.ui.notifications.NotificationFragment"
        android:label="@string/notifications_list"
        tools:layout="@layout/notification_fragment">
        <argument
            android:name="to_role"
            app:argType="string" />
        <argument
            android:name="to_id"
            app:argType="integer" />
    </fragment>
</navigation>