<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/supervisor_mobile_navigation"
    app:startDestination="@+id/supervisor_nav_profile">

    <fragment
        android:id="@+id/supervisor_nav_profile"
        android:name="jo.edu.aau.aautraining.supervisor.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/supervisor_profile_fragment"></fragment>
    <fragment
        android:id="@+id/supervisor_nav_schedule"
        android:name="jo.edu.aau.aautraining.supervisor.ui.schedule.ScheduleFragment"
        android:label="@string/my_schedule"
        tools:layout="@layout/supervisor_schedule_fragment"></fragment>
    <fragment
        android:id="@+id/supervisor_nav_student_list"
        android:name="jo.edu.aau.aautraining.supervisor.ui.students.SupervisorStudentsFragment"
        android:label="@string/students_list"
        tools:layout="@layout/supervisor_students_fragment">
        <action
            android:id="@+id/action_supervisor_nav_student_list_to_supervisor_nav_student_profile"
            app:destination="@id/supervisor_nav_student_profile" />
    </fragment>
    <fragment
        android:id="@+id/supervisor_nav_student_profile"
        android:name="jo.edu.aau.aautraining.supervisor.ui.students.profile.SupervisorStudentProfileFragment"
        android:label="@string/student_profile"
        tools:layout="@layout/supervisor_student_profile_fragment">
        <argument
            android:name="student_id"
            app:argType="integer" />
        <argument
            android:name="training_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_supervisor_nav_student_profile_to_supervisor_nav_chat"
            app:destination="@id/supervisor_nav_chat" />
        <action
            android:id="@+id/action_supervisor_nav_student_profile_to_supervisor_nav_contact_trainer"
            app:destination="@id/supervisor_nav_contact_trainer" />
    </fragment>
    <fragment
        android:id="@+id/supervisor_nav_contact_trainer"
        android:name="jo.edu.aau.aautraining.supervisor.ui.students.contacttrainer.ContactTrainerFragment"
        android:label="@string/contact_trainer"
        tools:layout="@layout/supervisor_contact_trainer_fragment">
        <argument
            android:name="trainer_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_supervisor_nav_contact_trainer_to_supervisor_nav_chat"
            app:destination="@id/supervisor_nav_chat" />
    </fragment>
    <fragment
        android:id="@+id/supervisor_nav_chat"
        android:name="jo.edu.aau.aautraining.shared.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/shared_chat_fragment">
        <argument
            android:name="contact_name"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
</navigation>