<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/student_nav_profile">

    <fragment
        android:id="@+id/student_nav_profile"
        android:name="jo.edu.aau.aautraining.student.ui.profile.ProfileFragment"
        android:label="@string/Profile"
        tools:layout="@layout/student_fragment_profile" >
        <argument
            android:name="trainingId"
            app:argType="integer"/>
        <argument
            android:name="studentId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/student_nav_schedule"
        android:name="jo.edu.aau.aautraining.student.ui.schedule.ScheduleFragment"
        android:label="@string/my_schedule"
        tools:layout="@layout/student_fragment_schedule" >
        <argument
            android:name="trainingId"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/student_nav_contact_supervisor"
        android:name="jo.edu.aau.aautraining.student.ui.contactsupervisor.SupervisorFragment"
        android:label="@string/contact_supervisor"
        tools:layout="@layout/student_fragment_supervisor">
        <argument
            android:name="supervisorId"
            app:argType="integer" />
        <argument
            android:name="studentId"
            app:argType="integer" />
        <action
            android:id="@+id/action_student_nav_contact_supervisor_to_student_nav_chat"
            app:destination="@id/student_nav_chat">
            <argument
                android:name="contact_name"
                android:defaultValue="Supervisor Name" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/student_nav_contact_trainer"
        android:name="jo.edu.aau.aautraining.student.ui.contacttrainer.ContactTrainerFragment"
        android:label="@string/contact_trainer"
        tools:layout="@layout/student_contact_trainer_fragment">
        <argument
            android:name="trainerId"
            app:argType="integer" />
        <argument
            android:name="studentId"
            app:argType="integer" />
        <action
            android:id="@+id/action_student_nav_contact_trainer_to_student_nav_chat"
            app:destination="@id/student_nav_chat">
            <argument
                android:name="contact_name"
                android:defaultValue="Trainer Name" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/student_nav_chat"
        android:name="jo.edu.aau.aautraining.shared.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/shared_chat_fragment">
        <argument
            android:name="contact_name"
            app:argType="string"
            android:defaultValue="" />
        <argument
            android:name="db_guid"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="from_role"
            app:argType="string" />
        <argument
            android:name="from_id"
            app:argType="integer" />
        <argument
            android:name="to_role"
            app:argType="string" />
        <argument
            android:name="to_id"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/student_nav_chat_list"
        android:name="jo.edu.aau.aautraining.shared.ui.chat.ChatListFragment"
        android:label="@string/chat_list"
        tools:layout="@layout/fragment_chat_list">
        <argument
            android:name="from_role"
            app:argType="string" />
        <argument
            android:name="from_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_student_nav_chat_list_to_student_nav_chat"
            app:destination="@id/student_nav_chat" />
    </fragment>
    <fragment
        android:id="@+id/student_nav_logout"
        android:name="jo.edu.aau.aautraining.shared.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/shared_logout_fragment">
        <action
            android:id="@+id/action_student_nav_logout_to_student_nav_profile"
            app:destination="@id/student_nav_profile" />
    </fragment>
    <fragment
        android:id="@+id/student_nav_notification_list"
        android:name="jo.edu.aau.aautraining.shared.ui.notifications.NotificationFragment"
        android:label="@string/notifications_list"
        tools:layout="@layout/notification_fragment">
        <argument
            android:name="to_role"
            app:argType="string" />
        <argument
            android:name="to_id"
            app:argType="integer" />
    </fragment>
</navigation>