<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".shared.ui.logout.LogoutFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Display3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm_logout"
        android:textAlignment="center"
        android:textColor="#fff" />

    <LinearLayout
        style="@style/Widget.AppCompat.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shared_logout_confirmBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_red_background_tint"
            android:text="@string/logout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/shared_logout_cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn_green_background_tint"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>