<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".student.ui.logout.StudentLogoutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/confirm_logout"
        android:textAlignment="center"
        android:textColor="#fff"
        style="@style/TextAppearance.AppCompat.Display3"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Widget.AppCompat.ButtonBar">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/trainer_logout_confirmBtn"
                android:backgroundTint="@color/btn_red_background_tint"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/trainer_logout_cancelBtn"
                android:backgroundTint="@color/btn_green_background_tint"/>
        </LinearLayout>

</LinearLayout>